--- a/MQX/Info.plist
+++ b/MQX/Info.plist
@@ -17,9 +17,19 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.1.0</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>允许访问媒体库</string>
+	<key>NSCameraUsageDescription</key>
+	<string>相机</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>允许访问您的地理位置</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>允许访问手机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>允许访问相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
